--- a/projects/harjoitustyo.html
+++ b/projects/harjoitustyo.html
@@ -2,27 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Le solar system</title>
+    <title>TKO_2023 Harjoitustyo: Anssi Kinnunen 501128</title>
 </head>
 <body>
-<p id="test"></p>
-<p id="test2"></p>
-<script type="text/javascript" src="../js/three.min.js"></script>
-<script type="text/javascript" src="../js/Detector.js"></script>
-<script type="text/javascript" src="../js/OrbitControls.js"></script>
-<script type="text/javascript" src="../js/cube.js"></script>
-<script type="text/javascript" src="../js/dat.gui.min.js"></script>
-<script type="text/javascript" src="../js/stats.min.js"></script>
+<script type="text/javascript" src="../lib/three.min.js"></script>
+<script type="text/javascript" src="../lib/Detector.js"></script>
+<script type="text/javascript" src="../lib/OrbitControls.js"></script>
+<script type="text/javascript" src="../js/spacesimulation.js"></script>
+<script type="text/javascript" src="../lib/dat.gui.min.js"></script>
+<script type="text/javascript" src="../lib/stats.min.js"></script>
 
-<script type="text/javascript" src="../js/EffectComposer.js"></script>
-<script type="text/javascript" src="../js/RenderPass.js"></script>
-<script type="text/javascript" src="../js/BloomPass.js"></script>
-<script type="text/javascript" src="../js/FilmPass.js"></script>
-<script type="text/javascript" src="../js/ShaderPass.js"></script>
-<script type="text/javascript" src="../js/MaskPass.js"></script>
-<script type="text/javascript" src="../js/CopyShader.js"></script>
-<script type="text/javascript" src="../js/ConvolutionShader.js"></script>
-<script type="text/javascript" src="../js/FilmShader.js"></script>
+<script type="text/javascript" src="../lib/EffectComposer.js"></script>
+<script type="text/javascript" src="../lib/RenderPass.js"></script>
+<script type="text/javascript" src="../lib/BloomPass.js"></script>
+<script type="text/javascript" src="../lib/FilmPass.js"></script>
+<script type="text/javascript" src="../lib/ShaderPass.js"></script>
+<script type="text/javascript" src="../lib/MaskPass.js"></script>
+<script type="text/javascript" src="../lib/CopyShader.js"></script>
+<script type="text/javascript" src="../lib/ConvolutionShader.js"></script>
+<script type="text/javascript" src="../lib/FilmShader.js"></script>
+<!-- Shader obtained from source http://mrdoob.github.io/three.js/examples/webgl_shader_lava.html -->
 <script type="x-shader/x-vertex" id="vertexShader">
 
 uniform vec2 uvScale;
@@ -37,10 +36,10 @@ void main() {
 }
 
 </script>
+<!-- Shader obtained from source http://mrdoob.github.io/three.js/examples/webgl_shader_lava.html -->
 <script type="x-shader/x-vertex" id="fragmentShader">
 
 uniform float time;
-// uniform vec2 resolution;
 
 uniform float fogDensity;
 uniform vec3 fogColor;
